refactor(): major changes to factorize methods around api v2/v4